--- a/Resources/views/BO/index.html.twig
+++ b/Resources/views/BO/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'TalanDynamicFormBundle::layout.html.twig' %}
 {% block body %}
-    <form class="form-horizontal" action="{{ path('talan_dynamic_bo_form', {'form': form.id}) }}" method="POST">
+    <form class="form-horizontal" action="{{ path('talan_dynamic_form_bo', {'form': form.id}) }}" method="POST">
         <div class="row">
             <h1>{{ 'dynamicForm.bo.formInfo' | trans }}</h1>
             <hr/>
