--- a/Resources/views/FO/index.html.twig
+++ b/Resources/views/FO/index.html.twig
@@ -4,7 +4,7 @@
         <h2>{{form.name}}</h2>
         <hr/>
         <input type="hidden" ng-model="formId" ng-init="formId = {{form.id}}">
-        <form class="form-horizontal" action="{{path('talan_dynamic_fo_form', {'form': form.id})}}" method="POST">
+        <form class="form-horizontal" action="{{path('talan_dynamic_form_fo', {'form': form.id})}}" method="POST">
             <div ng-model="input" fb-form="default" fb-default="defaultValue"></div>
             <div class="form-group">
                 <div class="col-md-8 col-md-offset-4">
