add value provider feature

--- a/Resources/views/BO/index.html.twig
+++ b/Resources/views/BO/index.html.twig
@@ -1,27 +1,36 @@
 {% extends 'TalanDynamicFormBundle::layout.html.twig' %}
 {% block body %}
-    <form class="form-horizontal" action="{{ path('talan_dynamic_form_bo', {'form': form.id}) }}" method="POST">
+    {% render(controller('TalanDynamicFormBundle:BO:view')) %}
+    {{ form_start(formView, {'class': 'form-horizontal'}) }}
         <div class="row">
             <h1>{{ 'dynamicForm.bo.formInfo' | trans }}</h1>
             <hr/>
             {% if form.id %}
-            <div class="form-group">
-                <label for="form-id" class="col-md-4 control-label">{{ 'dynamicForm.bo.id' | trans }}</label>
+            <div class="form-group container">
+                <label class="col-md-4 control-label required" for="form_type_id">{{ 'dynamicForm.bo.name' | trans }}</label>
                 <div class="col-md-8">
-                    <input type="text" ng-model="formId" ng-init="formId = {{form.id}}" id="form-id" class="form-control" value="{{ form.id }}" disabled>
+                    <input type="text" required="required" class="form-control" disabled="disabled" value="{{ form.id }}">
                 </div>
             </div>
             {% endif %}
-            <div class="form-group">
-                <label for="form-name" class="col-md-4 control-label">{{ 'dynamicForm.bo.name' | trans }}</label>
+            <div class="form-group container">
+                {{ form_label(formView.name)}}
                 <div class="col-md-8">
-                    <input type="text" id="form-name" name="form-name" class="form-control" required="true" value="{{ form.name }}">
+                    {{ form_widget(formView.name)}}
                 </div>
             </div>
-            <div class="form-group">
-                <label for="form-description" class="col-md-4 control-label">{{ 'dynamicForm.bo.description' | trans }}</label>
+            {% if formView.valueOwnerAlias %}
+            <div class="form-group container">
+                {{ form_label(formView.valueOwnerAlias) }}
                 <div class="col-md-8">
-                    <textarea id="form-description" name="form-description" class="form-control" required="true">{{ form.description }}</textarea>
+                    {{ form_widget(formView.valueOwnerAlias)}}
+                </div>
+            </div>
+            {% endif %}
+            <div class="form-group container">
+               {{ form_label(formView.description)}}
+                <div class="col-md-8">
+                    {{ form_widget(formView.description)}}
                 </div>
             </div>
             {% verbatim %}<input type="hidden" id="form-json" name="form-json" class="form-control" required="true" value="{{form}}">{% endverbatim %}
@@ -35,14 +44,14 @@
                         <h3 class="panel-title">{{ 'dynamicForm.bo.builder' | trans }}</h3>
                     </div>
                     <div fb-builder="default"></div>
-                    <div class="panel-footer">
-                        <div class="checkbox">
-                            <label><input type="checkbox" ng-model="isShowScope" />
-                                Show scope
-                            </label>
-                        </div>
-                        {% verbatim %}<pre ng-show="isShowScope">{{form}}</pre>{% endverbatim %}
-                    </div>
+{#                     <div class="panel-footer">#}
+{#                         <div class="checkbox">#}
+{#                             <label><input type="checkbox" ng-model="isShowScope" />#}
+{#                                 Show scope#}
+{#                             </label>#}
+{#                         </div>#}
+{#                         {% verbatim %}<pre ng-show="isShowScope">{{form}}</pre>{% endverbatim %}#}
+{#                     </div>#}
                 </div>
             </div>
 
@@ -53,11 +62,17 @@
         <hr/>
         <div class="form-group">
             <center>
-                <button type="submit" class="btn btn-primary">{{ 'dynamicForm.btn.save' | trans }}</button>
-                <button type="reset" class="btn btn-default">{{ 'dynamicForm.btn.reset' | trans }}</button>
+                {{ form_widget(formView.submit) }}
+                {{ form_widget(formView.reset) }}
+                {% if form.id %}
+                    <a  id="form_type_delete" class="btn btn-danger" target="_self" href="{{ path('talan_dynamic_form_bo_remove', {'form': form.id}) }}">
+                        {{ 'dynamicForm.btn.remove' | trans }}
+                    </a>
+                {% endif %}
             </center>
         </div>
-    </form>
+        {{ form_widget(formView._token) }}
+    {{ form_end(formView, {'render_rest': false}) }}
 
     <div class="row">
         <h2>{{ 'dynamicForm.bo.formPreview' | trans }}</h2>
@@ -70,12 +85,12 @@
                 </div>
             </div>
         </form>
-        <div class="checkbox">
-            <label><input type="checkbox" ng-model="isShowScope" ng-init="isShowScope=true" />
-                Show scope
-            </label>
-        </div>
-        {% verbatim %}<pre ng-show="isShowScope">{{input}}</pre>{% endverbatim %}
+{#         <div class="checkbox">#}
+{#             <label><input type="checkbox" ng-model="isShowScope" ng-init="isShowScope=true" />#}
+{#                 Show scope#}
+{#             </label>#}
+{#         </div>#}
+{#         {% verbatim %}<pre ng-show="isShowScope">{{input}}</pre>{% endverbatim %}#}
     </div>
 
     <div class="row">
