--- a/Resources/views/FO/index.html.twig
+++ b/Resources/views/FO/index.html.twig
@@ -3,6 +3,7 @@
     <div class="row">
         <h2>{{form.name}}</h2>
         <hr/>
+        <input type="hidden" ng-model="formId" ng-init="formId = {{form.id}}">
         <form class="form-horizontal" action="{{path('talan_dynamic_form_fo', {'form': form.id})}}" method="POST">
             <div ng-model="input" fb-form="default" fb-default="defaultValue"></div>
             <div class="form-group">
