--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -1,39 +1,37 @@
-<html ng-app="app">
-<head>
-    <meta charset="utf-8"/>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-    <script type="text/javascript" src="//code.angularjs.org/1.2.20/angular.min.js"></script>
-    <script type="text/javascript" src="//kelp404.github.io/angular-validator/dist/angular-validator.min.js"></script>
-    <script type="text/javascript" src="//kelp404.github.io/angular-validator/dist/angular-validator-rules.min.js"></script>
-    <script type="text/javascript" src="http://l-lin.github.io/angular-datatables/vendor/datatables/media/js/jquery.dataTables.js"></script>
-    <script type="text/javascript" src="http://l-lin.github.io/angular-datatables/archives/v0.2.1/dist/angular-datatables.min.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+        <script type="text/javascript" src="//code.angularjs.org/1.2.20/angular.min.js"></script>
+        <script type="text/javascript" src="//kelp404.github.io/angular-validator/dist/angular-validator.min.js"></script>
+        <script type="text/javascript" src="//kelp404.github.io/angular-validator/dist/angular-validator-rules.min.js"></script>
+        <script type="text/javascript" src="http://l-lin.github.io/angular-datatables/vendor/datatables/media/js/jquery.dataTables.js"></script>
+        <script type="text/javascript" src="http://l-lin.github.io/angular-datatables/archives/v0.2.1/dist/angular-datatables.min.js"></script>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="http://l-lin.github.io/angular-datatables/vendor/datatables/media/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="http://l-lin.github.io/angular-datatables/archives/v0.2.1/dist/datatables.bootstrap.min.css">
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+        <link rel="stylesheet" href="http://l-lin.github.io/angular-datatables/vendor/datatables/media/css/jquery.dataTables.min.css">
+        <link rel="stylesheet" href="http://l-lin.github.io/angular-datatables/archives/v0.2.1/dist/datatables.bootstrap.min.css">
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 
-    <link rel="stylesheet" href="//kelp404.github.io/angular-form-builder/dist/angular-form-builder.css">
-    <script type="text/javascript" src="//kelp404.github.io/angular-form-builder/dist/angular-form-builder.js"></script>
-    <script src="{{ asset('bundles/talandynamicform/js/app.js') }}" type="text/javascript"></script>
+        <link rel="stylesheet" href="//kelp404.github.io/angular-form-builder/dist/angular-form-builder.css">
+        <script type="text/javascript" src="//kelp404.github.io/angular-form-builder/dist/angular-form-builder.js"></script>
+        <script src="{{ asset('bundles/talandynamicform/js/app.js') }}" type="text/javascript"></script>
 
-    <title>Talan Dynamic Form Builder</title>
-</head>
-<body class="container">
-    <div ng-controller="FormController">
-    {% for flashMessage in app.session.flashbag.get('error') %}
-        <div class="flash-notice">
-            <div class="alert alert-danger">{{ flashMessage }}</div>
-        </div>
-    {% endfor %}
-    {% for flashMessage in app.session.flashbag.get('notice') %}
-        <div class="flash-notice">
-            <div class="alert alert-success">{{ flashMessage }}</div>
-        </div>
-    {% endfor %}
-    {% block body %}
-    {% endblock body %}
-    </div>
-</body>
+        <title>Talan Dynamic Form Builder</title>
+    </head>
+    <body class="container">
+        {% for flashMessage in app.session.flashbag.get('error') %}
+            <div class="flash-notice">
+                <div class="alert alert-danger">{{ flashMessage }}</div>
+            </div>
+        {% endfor %}
+        {% for flashMessage in app.session.flashbag.get('notice') %}
+            <div class="flash-notice">
+                <div class="alert alert-success">{{ flashMessage }}</div>
+            </div>
+        {% endfor %}
+        {% block talan_dynamic_form_content %}{% endblock %}
+    </body>
 </html>
