--- a/Resources/views/FO/index.html.twig
+++ b/Resources/views/FO/index.html.twig
@@ -1,5 +1,6 @@
 {% extends 'TalanDynamicFormBundle::layout.html.twig' %}
-{% block body %}
+{% block talan_dynamic_form_content %}
+<div ng-controller="FormController" ng-app="app">
     <div class="row">
         <h2>{{form.name}}</h2>
         <hr/>
@@ -14,4 +15,5 @@
             </div>
         </form>
     </div>
-{% endblock body %}
+</div>
+{% endblock %}
