Fix owner btn label

--- a/Resources/views/BO/formList.html.twig
+++ b/Resources/views/BO/formList.html.twig
@@ -16,7 +16,7 @@
             <td>{{ form.id }}</td>
             <td>{{ form.name }}</td>
             <td>
-                <a href="{{ path('talan_dynamic_form_bo_ownerList', {'form': form.id}) }}"  target="_self" title="{{ 'dynamicForm.bo.ownerList' | trans }}">
+                <a href="{{ path('talan_dynamic_form_bo_ownerList', {'form': form.id}) }}"  target="_self" title="{{ 'dynamicForm.btn.ownerList' | trans }}">
                     <i class="glyphicon glyphicon-user" style="color: teal; margin-right: 5px;"></i>
                 </a>
                 <a ng-href="{{ path('talan_dynamic_form_bo', {'form': form.id}) }}"  target="_self" title="{{ 'dynamicForm.btn.edit' | trans }}">
