--- a/Resources/views/OwnerList/connectedUser.html.twig
+++ b/Resources/views/OwnerList/connectedUser.html.twig
@@ -1,4 +1,4 @@
-{% extends 'TalanDynamicFormBundle::layout.html.twig' %}
+{% extends 'TalanDynamicFormBundle:OwnerList:default.html.twig' %}
 
 {% block talan_dynamic_form_owner_table %}
 <table datatable class="table table-striped table-hover">
